LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Modified_by_CapIQ__c.field-meta.xml
<CustomField>
    <fullName>Modified_by_CapIQ__c</fullName>
    <label>Modified by CapIQ</label>
    <type>Date</type>
</CustomField>