LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Month_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_Created_Date__c</fullName>
    <formula>CASE(MONTH( DATEVALUE(  CreatedDate  )),
1, &apos;Jan&apos;,
2, &apos;Feb&apos;,
3, &apos;Mar&apos;,
4, &apos;Apr&apos;,
5, &apos;May&apos;,
6, &apos;Jun&apos;,
7, &apos;Jul&apos;,
8, &apos;Aug&apos;,
9, &apos;Sep&apos;,
10, &apos;Oct&apos;,
11, &apos;Nov&apos;,
12, &apos;Dec&apos;,
&apos;None&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month (Created Date)</label>
    <type>Text</type>
</CustomField>