LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/MultiSelectExpertise__c.field-meta.xml
<CustomField>
    <fullName>MultiSelectExpertise__c</fullName>
    <label>MultiSelectExpertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assurance</fullName>
            </value>
            <value>
                <fullName>CFO services</fullName>
            </value>
            <value>
                <fullName>Digital Transformation</fullName>
            </value>
            <value>
                <fullName>Public Sector Advisory</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Technology Advisory</fullName>
            </value>
            <value>
                <fullName>Recovery &amp; Re-organization</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>GT Global Delivery</fullName>
            </value>
            <value>
                <fullName>Public Sector Consulting (PSC)</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Corporate Intelligence</fullName>
            </value>
            <value>
                <fullName>Forensic</fullName>
            </value>
            <value>
                <fullName>Cyber &amp; IT Risk (Cyber)</fullName>
            </value>
            <value>
                <fullName>Private Client Service</fullName>
            </value>
            <value>
                <fullName>Lead Advisory</fullName>
            </value>
            <value>
                <fullName>FS Consulting</fullName>
            </value>
            <value>
                <fullName>Transformation Solutions</fullName>
            </value>
            <value>
                <fullName>IKCC</fullName>
            </value>
            <value>
                <fullName>FS Risk</fullName>
            </value>
            <value>
                <fullName>DGTL</fullName>
            </value>
            <value>
                <fullName>Human Capital Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>