LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>