LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/New_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Change_Date__c</fullName>
    <description>Capture the Date for the creation on New Client Record</description>
    <label>New Change Date</label>
    <type>Date</type>
</CustomField>