LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/New_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client Id</label>
    <type>Text</type>
</CustomField>