LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/New_Client_Prospect_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Prospect_Address__c</fullName>
    <label>Enquiry Prospect Address</label>
    <type>Address</type>
</CustomField>