LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/New_Client_Record__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Record__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  FirstName &amp;&quot; &quot;&amp; LastName , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Click to view New Client</label>
    <type>Text</type>
</CustomField>