LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/New_Client_Score__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Score__c</fullName>
    <defaultValue>50</defaultValue>
    <label>New Client Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>