LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/NewClientEmail__c.field-meta.xml
<CustomField>
    <fullName>NewClientEmail__c</fullName>
    <label>New Client Email</label>
    <type>Email</type>
</CustomField>