LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/NewClientNo__c.field-meta.xml
<CustomField>
    <fullName>NewClientNo__c</fullName>
    <displayFormat>NCE-{000000}</displayFormat>
    <label>Enquiry No.</label>
    <type>AutoNumber</type>
</CustomField>