LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/NewClientOwnerName__c.field-meta.xml
<CustomField>
    <fullName>NewClientOwnerName__c</fullName>
    <description>Created as part of the fix for W-000837 (When user change the sector in Guidance path area this error is coming). This shows the New Client Owner and is used to display the name without the link to change the Owner for the the Outbound Team. This field is visible to the SectorAssignment profile and is added to the Pagelayout named &quot;Outbound Team Layout&quot; for the SectorAssignment profile.</description>
    <formula>IF
(
	NOT(ISBLANK(Owner:Queue.QueueName)),
	Owner:Queue.QueueName,
	Owner:User.FirstName + &quot; &quot; + Owner:User.LastName
)</formula>
    <label>Enquiry Owner Name</label>
    <type>Text</type>
</CustomField>