LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>13144</length>
    <type>LongTextArea</type>
</CustomField>