LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Next_Steps_and_Recommendations_from_BUEL__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_and_Recommendations_from_BUEL__c</fullName>
    <label>Next Steps and Recommendations from BUEL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>