LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/OnClientConnectStage__c.field-meta.xml
<CustomField>
    <fullName>OnClientConnectStage__c</fullName>
    <label>On Client Connect Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>