LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/OnClientCouncilStage__c.field-meta.xml
<CustomField>
    <fullName>OnClientCouncilStage__c</fullName>
    <label>On Client Council Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>