LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/OnClientTakeOnPreWorkStage__c.field-meta.xml
<CustomField>
    <fullName>OnClientTakeOnPreWorkStage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On Client Take-On PreWork Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>