LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/OnClientTakeOnStage__c.field-meta.xml
<CustomField>
    <fullName>OnClientTakeOnStage__c</fullName>
    <label>On Client Take On Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>