LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/OnFeasibilityAnalysisStage__c.field-meta.xml
<CustomField>
    <fullName>OnFeasibilityAnalysisStage__c</fullName>
    <label>On Feasibility Analysis Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>