LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/OnInternalExternalDiscussionsStage__c.field-meta.xml
<CustomField>
    <fullName>OnInternalExternalDiscussionsStage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On Internal / External Discussions Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>