LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/OnNewStage__c.field-meta.xml
<CustomField>
    <fullName>OnNewStage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On New Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>