LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/OnNotAcceptStage__c.field-meta.xml
<CustomField>
    <fullName>OnNotAcceptStage__c</fullName>
    <label>On NotAccept Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>