LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/OnPreQualificationStage__c.field-meta.xml
<CustomField>
    <fullName>OnPreQualificationStage__c</fullName>
    <label>On Pre Qualification Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>