LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>