LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Pardot_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Engagement__c</fullName>
    <label>Pardot Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>