LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Pardot_Sector__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Sector__c</fullName>
    <label>Pardot Sector</label>
    <length>200</length>
    <type>Text</type>
</CustomField>