LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/PayrollTax__c.field-meta.xml
<CustomField>
    <fullName>PayrollTax__c</fullName>
    <label>Payroll Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>