LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/PEInvestors__c.field-meta.xml
<CustomField>
    <fullName>PEInvestors__c</fullName>
    <label>PE Investors</label>
    <type>TextArea</type>
</CustomField>