LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Preliminary_New_Clients__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_New_Clients__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preliminary New Clients</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>New_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>