LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Proposed_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Client_Name__c</fullName>
    <label>Proposed Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>