LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Reject_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Reject_Remarks__c</fullName>
    <description>Reject Remarks to be field by Client Council Team after no response on record since 3,6 and 7 days. It will be dependent on Reject Reason field and will only be filled if Reject Reason value is selected Other.</description>
    <label>Reject Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>