LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <inlineHelpText>Any additional details related to the New Client</inlineHelpText>
    <label>Remark</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>