LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>Risk</label>
    <type>TextArea</type>
</CustomField>