LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Segment_As_Other__c.field-meta.xml
<CustomField>
    <fullName>Segment_As_Other__c</fullName>
    <label>Segment As Other</label>
    <type>TextArea</type>
</CustomField>