LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Shared_Up_Capital__c.field-meta.xml
<CustomField>
    <fullName>Shared_Up_Capital__c</fullName>
    <label>Paid up Share Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>