LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/SMEG_LT__c.field-meta.xml
<CustomField>
    <fullName>SMEG_LT__c</fullName>
    <label>SMEG</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>