LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/SMELeader__c.field-meta.xml
<CustomField>
    <fullName>SMELeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It depicts which user has referred this lead.</description>
    <label>SME Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>