LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <inlineHelpText>Choose an Integrated Solution or Bespoke Solution</inlineHelpText>
    <label>Solution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SolutionValues</valueSetName>
    </valueSet>
</CustomField>