LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/SolutionOther__c.field-meta.xml
<CustomField>
    <fullName>SolutionOther__c</fullName>
    <label>Solution (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>