LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Stock_Exchange_symbol__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange_symbol__c</fullName>
    <inlineHelpText>Name of the exchange where the company is listed</inlineHelpText>
    <label>Stock Exchange Symbol</label>
    <type>TextArea</type>
</CustomField>