LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Sub_Expertise_For_POC__c.field-meta.xml
<CustomField>
    <fullName>Sub_Expertise_For_POC__c</fullName>
    <label>SMEG (For POC)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubExpertise</valueSetName>
    </valueSet>
</CustomField>