LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/SubexpertiesForDuplicateRule__c.field-meta.xml
<CustomField>
    <fullName>SubexpertiesForDuplicateRule__c</fullName>
    <label>SMEGForDuplicateRule</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>