LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/SubExpertise__c.field-meta.xml
<CustomField>
    <fullName>SubExpertise__c</fullName>
    <description>It contains the information of sub expertise related to particular expertise.</description>
    <label>SMEG - Old (Not To Be Used)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubExpertise</valueSetName>
    </valueSet>
</CustomField>