LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/SubExpertiseForDeDupe__c.field-meta.xml
<CustomField>
    <fullName>SubExpertiseForDeDupe__c</fullName>
    <label>SMEG (For DeDupe)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>