LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Submitted_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submitted_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted For Approval</label>
    <type>Checkbox</type>
</CustomField>