LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/SubmitterID__c.field-meta.xml
<CustomField>
    <fullName>SubmitterID__c</fullName>
    <label>SubmitterID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>