LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/TAX__c.field-meta.xml
<CustomField>
    <fullName>TAX__c</fullName>
    <label>TAX</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>