LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Temp_Date__c.field-meta.xml
<CustomField>
    <fullName>Temp_Date__c</fullName>
    <description>Temp date field to verify non activity flow</description>
    <label>Temp Date</label>
    <type>Date</type>
</CustomField>