LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Temp_Modify_Days__c.field-meta.xml
<CustomField>
    <fullName>Temp_Modify_Days__c</fullName>
    <label>Temp Modify Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>