LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Temp_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Temp_Remarks__c</fullName>
    <description>[Deepak] - For Data Migration Only, soring the value of WCGT Pipeline ID WCGT Client ID &amp; WCGT Contact ID</description>
    <label>Temp_Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>