LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <inlineHelpText>Abbreviation used on the stock exchange to uniquely identify publicly traded shares</inlineHelpText>
    <label>Ticker Symbol</label>
    <type>TextArea</type>
</CustomField>