LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <label>Total Assets</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>