LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>