LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation</label>
    <type>Checkbox</type>
</CustomField>