LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/WCGTNewClientID__c.field-meta.xml
<CustomField>
    <fullName>WCGTNewClientID__c</fullName>
    <label>WCGTNewClientID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>