LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/WCGTStatus__c.field-meta.xml
<CustomField>
    <fullName>WCGTStatus__c</fullName>
    <label>WCGTStatus</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>