LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/WorkingCapital__c.field-meta.xml
<CustomField>
    <fullName>WorkingCapital__c</fullName>
    <formula>Total_Current_Assets__c  -  Total_Current_Liabilities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Working Capital = Current Asset - Current Liability</inlineHelpText>
    <label>Working Capital</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>