LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Would_you_like_to_leave_a_message_for_us__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_leave_a_message_for_us__c</fullName>
    <label>Would you like to leave a message for us</label>
    <length>255</length>
    <type>Text</type>
</CustomField>