LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/X3_Year_Growth_Potential__c.field-meta.xml
<CustomField>
    <fullName>X3_Year_Growth_Potential__c</fullName>
    <label>3 Year Growth Potential</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>