LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/YoungCSL__c.field-meta.xml
<CustomField>
    <fullName>YoungCSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It depicts which user has referred this lead.</description>
    <label>Young CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>