LinKreta_POC_Repository/force-app/main/default/objects/Lead/validationRules/EnquiryAfterConversionNotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>EnquiryAfterConversionNotChange</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    AND(
       NOT(IsConverted),
       Legacy_Data__c, 
       ISPICKVAL(Status,&apos;Converted&apos;)
    ), false,  

	IF( 
		OR(
			ISCHANGED(ByPassValidation__c), 
			ByPassValidation__c 
		), false , 
		AND(
			NOT(ISCHANGED(IsConverted)),
			IsConverted,
			Not(ByPassValidation__c)
		)
	)  
)</errorConditionFormula>
    <errorMessage>You are not allowed to change the Enquiry after it has been converted.</errorMessage>
</ValidationRule>