LinKreta_POC_Repository/force-app/main/default/objects/Lead/validationRules/mobile_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>mobile_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(NOT(ISNUMBER( MobilePhone )),NOT(ISBLANK( MobilePhone ))),
LEFT(MobilePhone,1)= &quot;0&quot;,AND(
NOT(ISBLANK( MobilePhone )),
OR(LEN(MobilePhone ) &gt;10,
LEN(MobilePhone) &lt; 10),
ISPICKVAL( CountryCode__c , &quot;India (+91)&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Enter Valid Mobile number</errorMessage>
</ValidationRule>