LinKreta_POC_Repository/force-app/main/default/objects/Lead/validationRules/New_Client_address_Check_Comma.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Client_address_Check_Comma</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(New_Client_Address__Street__s)), 
NOT(
    AND(
       
        CONTAINS(New_Client_Address__Street__s, &apos;,&apos;),
        REGEX(New_Client_Address__Street__s, &quot;.*[a-zA-Z0-9].*,.*[a-zA-Z0-9].*&quot;)
        
    ) 
))</errorConditionFormula>
    <errorDisplayField>New_Client_Address__Street__s</errorDisplayField>
    <errorMessage>Please add a comma-separated address</errorMessage>
</ValidationRule>